--- a/Angular2webapp/Angular2webapp/Angular2webapp.csproj
+++ b/Angular2webapp/Angular2webapp/Angular2webapp.csproj
@@ -268,6 +268,7 @@
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\polyfills.ts" />
     <TypeScriptCompile Include="app\shared\datex.pipe.ts" />
+    <TypeScriptCompile Include="app\shared\enums\loggername.enum.ts" />
     <TypeScriptCompile Include="app\shared\member\member.component.ts">
       <DependentUpon>member.component.html</DependentUpon>
     </TypeScriptCompile>
