--- a/Angular2webapp/Angular2webapp/Web.config
+++ b/Angular2webapp/Angular2webapp/Web.config
@@ -23,8 +23,15 @@
     <httpHandlers>
       <add verb="*" path="*.logger" type="JSNLog.LoggerHandler, JSNLog" />
     </httpHandlers>
+    <!--<customErrors mode="On" defaultRedirect="~/401.2.html">      
+      <error statusCode="401" redirect="401.2.html" />
+    </customErrors>-->
   </system.web>
   <system.webServer>
+    <!--<httpErrors errorMode="Custom" defaultResponseMode="File" >
+      <remove statusCode="401" />
+      <error statusCode="401" responseMode="ExecuteURL" path="/401.2.html" />
+    </httpErrors>-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -52,7 +59,7 @@
           <action type="Rewrite" url="/" />
         </rule>
       </rules>
-    </rewrite>
+    </rewrite>    
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
