--- a/Angular2webapp/Angular2webapp/config.development.json
+++ b/Angular2webapp/Angular2webapp/config.development.json
@@ -14,6 +14,10 @@
       "level": "VERBOSE"
     },
     {
+      "name": "NG_UserSrvc",
+      "level": "VERBOSE"
+    },
+    {
       "name": "NG_Area1",
       "level": "VERBOSE"
     },
