--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -38,6 +38,7 @@
     "@types/core-js": "^0.9.41",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.1",
+    "@compodoc/compodoc": "1.0.0-beta.13",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
