--- a/.codebeatignore
+++ b/.codebeatignore
@@ -1,1 +1,3 @@
 ﻿/Angular2webapp/Angular2webapp/documentation/**
+ Angular2webapp/Angular2webapp/documentation/**
+ Angular2webapp/Angular2webapp/documentation/*
