--- a/Angular2webapp/Angular2webapp/Web.config
+++ b/Angular2webapp/Angular2webapp/Web.config
@@ -42,6 +42,10 @@
     </handlers>
     <rewrite>
       <rules>
+        <rule name="Swagger Routes" stopProcessing="true">
+          <match url="^swagger/" />
+          <action type="None" />
+        </rule>
         <rule name="WebApi Routes" stopProcessing="true">
           <match url="^api/" />
           <action type="None" />
@@ -83,6 +87,14 @@
       <dependentAssembly>
         <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
