--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation for visual studio 2017 & WebApi",
   "scripts": {
+    "ngc": "ngc -p tsconfig.aot.json",
     "build:prod": "webpack --config config/webpack.prod.js --colors --progress",
     "build": "webpack --colors",
     "build:vendor": "webpack --config webpack.splitted.vendor.js --colors",
@@ -25,6 +26,8 @@
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/router": "^4.3.1",
 
+    "@swimlane/ngx-datatable": "9.3.1",
+    "angular-tree-component": "^4.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "1.12.4",
@@ -39,7 +42,7 @@
     "@types/core-js": "^0.9.41",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.2",
-    "@compodoc/compodoc": "1.0.0-beta.13",
+    "@compodoc/compodoc": "1.0.0-beta.14",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
@@ -50,8 +53,6 @@
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.2",
     "to-string-loader": "^1.1.5",
-    "typedoc": "^0.7.2",
-    "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "~2.4.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.4.1",
