--- a/Angular2webapp/Angular2webapp/packages.config
+++ b/Angular2webapp/Angular2webapp/packages.config
@@ -17,5 +17,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NLog" version="4.4.10" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
