WebApi not found -> redirect. Update some packages.

--- a/Angular2webapp/Angular2webapp/config.development.json
+++ b/Angular2webapp/Angular2webapp/config.development.json
@@ -24,6 +24,10 @@
     {
       "name": "API_Logger",
       "level": "VERBOSE"
+    },
+    {
+      "name": "NG_ApiService",
+      "level":  "VERBOSE"
     }
   ]
 }
